Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ li {
 #tribute-link {
   cursor: pointer;
   font-size: 2rem; 
+  padding: 1rem;
   text-decoration: none;
   color:rgba(0, 0, 0, .5); 
 }
